<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pass_cred">Password</string>
    <string name="email_cred">Username</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="device_name">Device Name</string>
    <string name="experiment">Experiment</string>
    <string name="objective">Objective</string>
    <string name="device_id">THING00001</string>
    <string name="escalation">Escalation</string>
    <string name="battery_value">100%</string>
    <string name="escalation_value">5</string>
    <string name="temp_value">5</string>
    <string name="temp_label">TEMPERATURE</string>
    <string name="humid_value">90%</string>
    <string name="humid_label">HUMIDITY</string>
    <string name="analysis">ANALYSIS</string>
    <string name="add_Device">ADD Device</string>
    <string name="sign_out">Logout</string>
    <string name="user_name">UserName</string>
    <string name="email_id">Email Id</string>
    <string name="location">Location</string>
    <string name="add">ADD</string>
    <string name="percent">%</string>
    <string name="degree_cel">°C</string>
    <string name="lux_value">lx</string>
    <string name="ppm_value">ppm</string>
    <string name="gas_label">CO2</string>
    <string name="accel_label">Accel</string>
    <string name="lux_label">Lux</string>
    <string name="gyro_label">Gyro</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_name">ThingHz</string>
    <string name="added_devices">Added Devices</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_humid">Max Temp</string>
    <string name="min_humid">Min Temp</string>
    <string name="max_gas">Max Temp</string>
    <string name="min_gas">Min Temp</string>
    <string name="pdf_header">REPORT</string>
    <string name="light_state_label">Light State</string>
    <string name="light_init_label">Light Intensity</string>
    <string name="mqtt_connection_status">MQTT Connecting…</string>
    <string name="light_on_event_hint">pick time for light on event</string>
    <string name="light_off_event_hint">pick time for light off event</string>
    <string name="light_1">Light 1</string>
    <string name="light_2">Light 2</string>
    <string name="light_3">Light 3</string>
    <string name="light_4">Light 4</string>
    <string name="shelf_1">Shelf 1</string>
    <string name="shelf_2">Shelf 2</string>
    <string name="shelf_3">Shelf 3</string>
    <string name="shelf_4">Shelf 4</string>
    <string name="update_light_settings">Update light Settings</string>
    <string name="connect_to_mqtt">Connect to device</string>
    <string name="mqtt_reconnection_status">Reconnecting</string>
    <string name="mqtt_disconnected_status">Disconnected</string>


    <string-array name="max_Temp_enteries">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
    </string-array>

    <string-array name="min_Temp_enteries">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
    </string-array>

    <string-array name="max_Humidity_enteries">
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>

    <string-array name="min_Humidity_enteries">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string-array name="max_carbon_enteries">
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
    </string-array>

    <string-array name="min_carbon_enteries">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>

    <string-array name="device_status_enteries">
        <item>online</item>
        <item>offline</item>
    </string-array>

    <string-array name="sensor_profile_enteries">
        <item>Temperature </item>
        <item>Temperature and Humidity </item>
        <item>Gas</item>
        <item>Gyro and Accel</item>
        <item>Moisture</item>
        <item>Control</item>
        <item>Capacitance</item>
    </string-array>

    <string-array name="escalation_enteries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="graph_entries">
        <item>temperature</item>
        <item>humidity</item>
        <item>CO2</item>
        <item>temperature and Humidity</item>
        <item>Combined</item>
    </string-array>

    <string-array name="max_lux_enteries">
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>5500</item>
        <item>6000</item>
    </string-array>

    <string-array name="min_lux_enteries">
        <item>500</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_menuitem">Logout</string>
    <string name="two_hour_menuitem">2h</string>
    <string name="twentyfour_hour_menuitem">24h</string>
    <string name="tweleve_hour_menuitem">12h</string>
    <string name="select_Graph">Graph</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_management">User Management</string>
    <string name="about">About</string>
    <string name="download_report">Download Report</string>
    <string name="user_info">User</string>
    <string name="filter">Filter Devices</string>
    <string name="all_devices">All Devices</string>
    <string name="role_label">Role:</string>
    <string name="role_value">Admin</string>
    <string name="email_label">Email:</string>
    <string name="email_value">abc@gmail.com</string>
    <string name="status_label">Status:</string>
    <string name="status_value">Active</string>
    <string name="location_label">Location:</string>
    <string name="location_value">Baijnath</string>
    <string name="device_status">Device Status</string>
    <string name="sensor_profile">Sensor Profile</string>
    <string name="filter_device">Filter</string>
    <string name="reset_filter">Reset</string>
    <string name="data_not_available">No data available for selected filters, Select the appropriate filters</string>
    <string name="set_up_wifi_cred">Steps to setup WiFi Cred\n\nStep 1. To set up WiFi SSID and password for the device. Press RST button on the right side of device once\n\nStep 2. Now enable Wifi\n\nStep 3. Connect to ThingHz from the list of available WiFi Connection</string>
    <string name="wifi_not_enabled">WiFi not enabled, Enable the WiFi from WiFi Settings</string>
    <string name="connect_to_thing">From list of available wifi network connect to ThingHz</string>
    <string name="ssid">WiFi SSID</string>
    <string name="wifi_pass">WiFi PassKey</string>
    <string name="configure">Configure</string>
    <string name="waiting">Waiting for successful Connection</string>
    <string name="user">User</string>
    <string name="max_humidity">Max Humidity</string>
    <string name="min_humidity">Min Humidity</string>
    <string name="max_carbon_dioxide">Max Carbon dioxide</string>
    <string name="min_carbon_dioxide">Min Carbon dioxide</string>
    <string name="profile_value">Profile Value</string>
    <string name="update_device_settings">Update Device Settings</string>
    <string name="gas_value">400</string>
    <string name="msg_token_fmt">token</string>
    <string name="dash">-</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="device_settings">Device Settings</string>
    <string name="set_lux_value">set Lux Value</string>
    <string name="update_experiments">Update experiment</string>
    <string name="set_lux_manually">Set Lux Manually</string>
    <string name="update_light_events">Update Light Events</string>
    <string name="set_schedule_time">Set schedule time</string>
    <string name="day_period">Day Period (In hr)</string>
    <string name="_12">12</string>
    <string name="light_off">Light Off</string>
    <string name="light_on">Light On</string>
    <string name="schedule">schedule</string>
    <string name="delete_light_events">Delete Light Events</string>
    <string name="pick_interval">Pick Interval</string>
    <string name="_2_days">2 Days</string>
    <string name="_1_week">1 Week</string>
    <string name="_15_days">15 Days</string>
    <string name="progress">%</string>
    <string name="pick_device">Pick Device</string>
    <string name="custom_range">Custom range</string>
    <string name="pick_start_time_date">Pick Start Time/Date</string>
    <string name="hh_mm">HH:MM</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="share_report">Share Report</string>
    <string name="max_lux">Max Lux</string>
    <string name="min_lux">Min Lux</string>
</resources>