<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context=".Preferance">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/card_preferance">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/device_name"
                    android:textColor="@color/text_color_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_device_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/device_id"
                    android:textColor="@color/text_color_light_87"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_settings"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/text_color_light_87"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/iv_update_device_Settings"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_all_devices_svg"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>


            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_temp_card"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="4dp"
                    android:text="@string/temp_value"
                    android:textColor="@color/text_color_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_temp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_label"
                    android:textColor="@color/text_color_light_87"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_lux_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gas_value"
                    android:textColor="@color/text_color_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_lux_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lux_label"
                    android:textColor="@color/text_color_light_87"
                    android:textSize="12sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_humid_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humid_value"
                    android:textColor="@color/text_color_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_humid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humid_label"
                    android:textColor="@color/text_color_light_87"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_experiment_update"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:progressTint="@color/colorPrimary" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_experiment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:itemCount="4"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>

